test/conformance/chainsaw/deleting-policies/rbac-missing/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-missing-pod
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:latest
