test/conformance/chainsaw/deleting-policies/rbac-missing/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: rbac-missing-configmap
  namespace: default
