test/conformance/chainsaw/deleting-policies/rbac-missing/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-missing-pod
  namespace: default
